# GhoulVault

./: README.md  pyproject.toml  requirements.txt
src/: config.py  db.py  main_app.py  populate.sql  queries.py  schema.sql  template_filters.py
src/static/: style.css
src/templates/: base.html  dashboard.html  delete_report.html  encounter.html  encounters.html  error.html  ghoul.html  ghouls.html  human.html  humans.html  investigator.html  investigators.html  killing.html  killings.html  login.html  murder.html  murders.html  new_encounter.html  new_killing.html  new_murder.html  new_report.html  new_ward.html  quinque.html  quinques.html  report.html  reports.html  transfer_quinque.html  upgrade_quinque.html  wards.html
