[project]
name = "48"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.3",
    "jinja2>=3.1.6",
    "mysql-connector-python>=9.5.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "rope>=1.14.0",
    "ruff>=0.14.5",
]
